--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kcpaulsen/ish",
   "version": "1.0.0",
   "description": "Fuzzy command line cli tool",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "fuse.js": "^3.4.5"
+  },
+  "bin": {
+    "ish": "./bin/index.js"
   }
 }
