--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kcpaulsen/ish",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Fuzzy command line cli tool",
   "main": "./index.js",
   "scripts": {
@@ -14,6 +14,10 @@
     "search",
     "cli"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kristopherpaulsen/ish.git"
+  },
   "author": "Kristopher C. Paulsen",
   "license": "MIT",
   "dependencies": {
