--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kcpaulsen/ish",
-  "version": "1.0.29",
+  "version": "1.1.0",
   "description": "Fuzzy command line cli tool",
   "main": "./index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "ish": "./index.js"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "lodash": "^4.17.15"
   }
 }
