--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kcpaulsen/ish",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Fuzzy command line cli tool",
   "main": "./index.js",
   "scripts": {
@@ -21,13 +21,13 @@
   "author": "Kristopher C. Paulsen",
   "license": "MIT",
   "dependencies": {
-    "fuse.js": "^3.4.5"
+    "fuse.js": "^3.4.5",
+    "lodash": "^4.17.15"
   },
   "bin": {
     "ish": "./index.js"
   },
   "devDependencies": {
-    "jest": "^24.9.0",
-    "lodash": "^4.17.15"
+    "jest": "^24.9.0"
   }
 }
